--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "SWL"
   ],
   "author": "Adenike Adeyemi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fastify": "^1.14.1",
+    "handlebars": "^4.1.0",
+    "point-of-view": "^2.1.0"
+  }
 }
