--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "author": "Adenike Adeyemi",
   "license": "ISC",
   "dependencies": {
-    "chokidar": "^3.0.0",
     "fastify": "^2.1.0",
     "fastify-static": "^2.3.4",
     "handlebars": "^4.1.2",
-    "point-of-view": "^3.1.1",
-    "watch": "^1.0.2"
+    "point-of-view": "^3.1.1"
   }
 }
